# e-Hanoi-Launcher

./: .eslintrc.json  .gitignore  README.md  apollo.config.js  codegen-client.yml  graphql.config.js  package-lock.json  package.json
.circleci/: config.yml
public/: index.html  manifest.json
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AlreadySignedIn.tsx  Auth.tsx  Introduce.tsx  RankingTable.tsx
src/components/common/: AuthProvider.tsx  Header.tsx  Layout.tsx  Loading.tsx  mouseStalker.tsx
src/components/context/: AuthProvider.tsx
src/graphql/: index.ts  schema.graphql  types.ts
src/graphql/handler/score/: RankingScoreHandler.tsx
src/graphql/handler/user/: CreateUserInDbHandler.tsx
src/graphql/queries/score/: rankingScore.generated.ts  rankingScore.graphql
src/graphql/queries/user/: createUserInDB.generated.ts  createUserInDB.graphql  getUser.generated.ts  getUser.graphql  listUser.generated.ts  listUser.graphql
src/pages/: 404.tsx  _app.tsx  _document.tsx  create_user.tsx  index.tsx  ranking.tsx  sign_form.tsx
src/utils/: iconMaker.ts
src/utils/firebase/: auth.tsx
