[package]
name = "app"
version = "0.1.0"
authors = ["Lastronauts <lastronauts@outlook.jp>"]
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
anyhow = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-rc.5", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
